--- a/src/APP.css
+++ b/src/APP.css
@@ -1,6 +1,8 @@
 .container {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
+  width: 600px;
+  user-select: none;
 }
 
 .cell.marked {
@@ -9,4 +11,21 @@
 
 .cell.bomb {
   background-color: tomato;
+}
+
+.button {
+  margin-top: 1rem;
+  height: 35px;
+  background-color: rgb(32, 32, 32);
+  color: whitesmoke;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px;
+}
+
+h2 {
+  background-color: rgb(108, 255, 71);
+  border: 2px solid darkcyan;
+  grid-column: 5/7;
+  text-align: center;
 }
