--- a/src/APP.css
+++ b/src/APP.css
@@ -6,11 +6,11 @@
 }
 
 .cell.marked {
-  background-color: rgb(108, 255, 71);
+  background-color: rgb(91, 199, 64);
 }
 
 .cell.bomb {
-  background-color: tomato;
+  background-color: rgb(228, 105, 83);
 }
 
 .button {
@@ -21,11 +21,23 @@
   border-radius: 5px;
   text-align: center;
   padding: 5px;
+  grid-column: 1/3;
 }
 
 h2 {
-  background-color: rgb(108, 255, 71);
+  background-color: rgb(91, 199, 64);
   border: 2px solid darkcyan;
-  grid-column: 5/7;
+  grid-column: 4/8;
   text-align: center;
+}
+
+.clean {
+  margin-top: 1rem;
+  height: 35px;
+  background-color: rgb(32, 32, 32);
+  color: whitesmoke;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px;
+  grid-column: 9/11;
 }
