--- a/src/APP.css
+++ b/src/APP.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  /* grid-template-columns: repeat(10, 1fr); */
   width: 600px;
   user-select: none;
 }
@@ -21,7 +21,7 @@
   border-radius: 5px;
   text-align: center;
   padding: 5px;
-  grid-column: 1/3;
+  grid-column: 1 / span 2;
 }
 
 h2 {
@@ -39,5 +39,5 @@ h2 {
   border-radius: 5px;
   text-align: center;
   padding: 5px;
-  grid-column: 9/11;
+  grid-column:  span 2/-1;
 }
