BG Remane App->Game

--- a/src/Game.css
+++ b/src/Game.css
@@ -26,6 +26,8 @@
 
 h2 {
   background-color: rgb(91, 199, 64);
+  height: 35px;
+  border-radius: 5px;
   border: 2px solid darkcyan;
   grid-column: 4/8;
   text-align: center;
@@ -39,5 +41,6 @@ h2 {
   border-radius: 5px;
   text-align: center;
   padding: 5px;
-  grid-column:  span 2/-1;
+  grid-column: span 2/-1;
 }
+
