--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   /* background: white; */
   background-attachment: fixed;
   letter-spacing: -1px;
+  text-align: center;
 }
 
 code {
@@ -36,7 +37,7 @@ code {
   display: grid;
   justify-content: center;
   align-items: center;
-  border: 2px solid rgba(0, 0, 0, 0.30);
+  border: 2px solid rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   font-size: 35px;
 }
