--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -29,7 +29,7 @@ h2 {
   height: 35px;
   border-radius: 5px;
   border: 2px solid darkcyan;
-  grid-column: 4/8;
+  /* grid-column: 4/8; */
   text-align: center;
 }
 
