--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -9,6 +9,7 @@
   display: grid;
   width: 35px;
   height: 35px;
+  color: #3e3f3a;
   justify-content: center;
   align-items: center;
   border: 1px solid rgba(0, 0, 0, 0.3);
@@ -18,6 +19,7 @@
 
 .cell.marked {
   background-color: #73a839;
+  color: whitesmoke;
 }
 
 .cell.bomb {
@@ -27,23 +29,19 @@
 .button {
   margin-top: 1rem;
   height: 35px;
-  background-color: rgb(32, 32, 32);
+  background-color: #8e8c84;
   color: whitesmoke;
   border-radius: 5px;
   text-align: center;
   padding: 5px;
   grid-column: 1 / span 2;
+  user-select: none;
+  cursor: pointer;
 }
 
-.clean {
-  margin-top: 1rem;
-  height: 35px;
-  background-color: rgb(32, 32, 32);
-  color: whitesmoke;
-  border-radius: 5px;
-  text-align: center;
-  padding: 5px;
-  grid-column: span 2/-1;
+.button:hover {
+  background: #3e3f3a;
+  color: #fff;
 }
 
 .timer {
