--- a/src/components/Pages/NewGame.css
+++ b/src/components/Pages/NewGame.css
@@ -7,6 +7,7 @@
 
 h2 {
   display: grid;
+  color: #3e3f3a;
   align-self: center;
   justify-self: center;
   min-width: 720px;
@@ -15,8 +16,8 @@ h2 {
 
 .level {
   color: whitesmoke;
-  background-image: linear-gradient(#88c149, #73a839 60%, #699934);
-  background-repeat: no-repeat;
+  /* background-image: linear-gradient(#88c149, #73a839 60%, #699934);
+  background-repeat: no-repeat; */
   background-color: #73a839;
   border-color: #73a839;
   display: grid;
@@ -27,10 +28,11 @@ h2 {
   user-select: none;
 
   border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  /* font-weight: 600; */
+  /* line-height: 1.5; */
+  border-radius: 0.25rem;
 }
 
 .level-wrapper {
